# Machine_Vision_Projects

./: README.md
show_image/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  tracking_window.cpp  tracking_window.h  tracking_window.ui
